metacatui/src/main/webapp/js/themes/gulfwatch/css/metacatui.css
/* ... */
    /* Carousel base class */
    .carousel {
      width: 100%;
      margin-bottom: 0px;
      max-height: 400px;
      
    }

    .carousel-control {
      height: 80px;
      margin-top: 0;
      font-size: 120px;
      font-weight: 400;
      text-shadow: 0 1px 1px rgba(0,0,0,.4);
      background-color: transparent;
      border: 0;
      z-index: 189;
    }

    .carousel .left {
      left: 50px;
      z-index: 190;
    }
    
    .carousel .right {
      right: 30px;
      z-index: 191;
    }

    .carousel .item {
      background-color: #FDFDFD; /* Fallback to solid color if the gradient fails */
      background-image: -webkit-gradient(
       linear,
       left bottom,
       left top,
       color-stop(0.9, #FFFFFF),
       color-stop(0.3, #FDFDFD)
      );
      z-index: 170;
      /*
      -webkit-transition: opacity 4s; 
      -moz-transition: opacity 4s; 
      -ms-transition: opacity 4s; 
      -o-transition: opacity 4s; 
      transition: opacity 4s;
      */
    	-webkit-transition:0.6s ease-in-out left;
    	-moz-transition:0.6s ease-in-out left;
    	-ms-transition:0.6s ease-in-out left;
    	-o-transition:0.6s ease-in-out left;
    	transition:0.6s ease-in-out left;
      max-height: 400px;
      overflow: hidden;
    }
    
    .carousel-caption {
      background: rgba(0,0,0,0.3);
      position: absolute;
      top: 150px;
      left: 50%;
      margin: 0px 0px 0px -250px;
      width: 500px;
      max-height: 130px;
      z-index: 200;
      padding: 10px 20px 10px 20px;
      -webkit-border-radius: 6px;
         -moz-border-radius: 6px;
              border-radius: 6px;
      
    }
    
    .carousel-caption h1 {
      margin: 0px;
      line-height: 1.25;
      font-family: "Muli";
      font-weight: 400;
      font-size: 36px;
      color: #FDFDFD;
    }
    
    .carousel-caption .lead {
      margin: 0;
      line-height: 1;
      font-family: "Muli";
      font-weight: 400;
      font-size: 24px;
      color: #FDFDFD;
    }
    .carousel-caption .btn-primary {
      position: absolute;
      bottom: 20px;
      right: 20px;
    }

  /* MAIN BODY CSS
  -------------------------------------------------- */
  /* Main body containing sidebar and content */
    .main-body-padded {
      padding-top: 90px;
    }
    
    a {
       color: #1388b7;
    }
    
    a:hover {
       color: #1388b7;
       text-decoration: underline;
    }
    #sidebar_share {
      margin: 20px 10px 10px 15px;
    }
    
    #search_txt_side{
      width: 70%;
    }
    
    h2.nav-header {
      font: 700 18px/18px "Muli";
      margin: 20px 10px 10px 15px;
      padding: 3px 0px 3px 0px;
      color: #555555;      
    }
    
    .nav-list{
    	width: 100%;
    }

	.nav-list > .active > a {
	  background-color:#009999;
	}
	
	.nav-list > .active > a:hover {
	   background-color: #009999;
	}
	
	.nav-list > .active > a:active {
	   background-color: #009999;
	}
	
	.nav-list > li > a:hover {
	   color: #FFFFFF;
	}
	   
    #refine .nav-list {
      margin: 20px auto auto auto;
    }
    
    
    ul#refine .nav-list .input-append {
      max-width: 200px;
    }

    #browse .nav-list {
      margin: 20px auto auto auto;
      border: 1px solid #CCCCCC;
    }
    
    ul#browse a i {
      margin-right: 7px;
    }
    
    ul#browse a {
      font: 400 15px/15px "Muli";
      color: #555555;
    }

    ul#browse a:hover, ul#browse a:focus  {
      color: #3F3F3F;
    }
    
    .result-citation{
       width: 82%;
    }

  /* About CSS
  -------------------------------------------------- */
    #About {
		min-height: 800px;
    }

  /* Metadata rendering CSS
  -------------------------------------------------- */
    #Metadata {
		min-height: 800px;
    }
    
    #Metadata > .container {
      background-color: #FFFFFF;
	  box-shadow: 0 0 0 10px #FFFFFF;
	  border: 1px solid #D1D3D4;
	  padding: 20px;
    }
   
    
	/* Registry CSS
	-------------------------------------------------- */
    #RegistryEntryForm, 
    #RegistryLogin, 
    #RegistryResponse, 
    #RegistryEntryReview, 
    #RegistryGuide {
		/*margin-top: 110px;*/
		min-height: 800px;
    }
    
    #RegistryLogin > .container,
    #RegistryEntryForm > .container,
    #RegistryResponse > .container,
    #RegsitryEntryReview > .container,
    #RegistryGuide > .container {
        background-color: #FFFFFF;
	    box-shadow: 0 0 0 10px #FFFFFF;
		border: 1px solid #D1D3D4;
		padding: 20px;
    }
    
    /* Larger modal for guide content */
    .modal.large {
    	width: 80%;
    	margin-left: -40%;
    }
    
  /* Data Catalog CSS
  -------------------------------------------------- */
	#mainBody {
		min-height: 500px;
		display:table;
		width: 960px;
		margin: 0px auto;
	}
	 
	#mainBody .span9 {
	    width: 72.46808510638297%;
	    background-color: #FFFFFF;
	    box-shadow: 0 0 0 10px #FFFFFF;
		border: 1px solid #D1D3D4;
	}
	
	#mainBody .span3 {
		width: 21.404255319148934%;
		background-color: #FFFFFF;
	    box-shadow: 0 0 0 10px #FFFFFF;
		border: 1px solid #D1D3D4;
		margin-left: 4.127659574468085%;
	}
	
	#attributeTabs li > a{
		word-wrap: break-word;
	}
	
	#attributeTabs li > a:hover{
		color: #1388b7;
	}

  /* SIDEBAR CSS
  -------------------------------------------------- */
    #sidebar {
      min-height: 400px;
      background-color:#FFFFFF;
      box-shadow: 0 0 0 10px #FFFFFF;
      border:1px solid #D1D3D4;
    }
    
    .sidebar-subhead {
      color: #666666;
      font-weight: bold;
      text-transform:uppercase;
      padding: 20px 0 10px 0;
    }
    
    .sidebar-item {
      color: #666666;
      font-weight: bold;
      padding: 5px;
      border-radius: 5px;
      -webkit-border-radius: 5px;
      -moz-border-radius: 5px;
      line-height: 25px;
    }
    
    .sidebar-item-selected {
      background-color: #AAAAAA;
      color: #fff;
      padding-top: 3px;
      padding-bottom: 3px;
    }
    
    .btn {
       padding: 4px 5px;
    }
/* ... */

